tests/ty-var-annot-03/out.txt
error: mismatched types: expected '22, found int
  ┌─ err.sml:1:29
  │
1 │ fun 'a f (id: 'a -> 'a) x = id x + 1
  │                             ^^^^^^^^

typechecking failed
